docs-cn/docs/rubik-pi-3-user-manual/1.0.0/7.Porting.md
---
sidebar_position: 7
description: ''
custom_edit_url: https://github.com/rubikpi-ai/documentation/blob/main/docs-cn/docs/rubik-pi-3-user-manual/1.0.0/7.Porting.md
---

# 7. 工具&库移植指南

魔方派 3 已经将开发常用的工具和库集成，若开发过程中使用的工具未集成，可参考 cec-clinet 移植方法进行移植：

## 7.1 cec-client 移植

* 首先设置交叉编译环境，具体步骤可参考 1.11.2 安装交叉编译工具小节：

```shell showLineNumbers
source <your toolchains directory>/environment-setup-armv8-2a-qcom-linux
```

* 下载*libcec*源码：

```shell showLineNumbers
git clone https://github.com/Pulse-Eight/libcec
```

* 进入*cec-client*源码目录执行：

```shell showLineNumbers
mkdir build
cmake ..  -DCMAKE_INSTALL_PREFIX=../bin
make
```

`make`命令后会有如下报错，发现是没有 p8-platform 库：

![](images/image-104.jpg)

* 为解决报错，交叉编译 p8-platform 库

* 下载 *p8-platform* 源码：

```shell showLineNumbers
git clone https://github.com/Pulse-Eight/platform
```

* 进入 *platform* 文件夹执行：

```shell showLineNumbers
mkdir build
cmake ..  -DCMAKE_INSTALL_PREFIX=../bin
make
```

* 到 *bin* 目录将编译生成物拷贝到交叉编译工具链的*sysroot*目录下，如下 */home/zhy/QCOM/sdk* 为交叉编译工具的安装路径，具体可参考快速开始->Linux kernel->代码编译部分：

```shell showLineNumbers
cp libp8-platform.a /home/zhy/QCOM/sdk/sysroots/armv8-2a-qcom-linux/usr/lib/
```

* 回到*libcec*目录，继续编译：

```shell showLineNumbers
cd libcec/build
make 
```

* 编译通过后执行下面命令，将生成物导出到*bin*目录：

```shell showLineNumbers
make install
```

* 执行下面命令查看编译生成物，如下，cec-client 工具已经生成。因 魔方派 3 中已经集成了 libcec 的库，可以 cec-clinet 传输到 魔方派 3 中运行：

:::tip
传输文件可使用 ADB、SCP 等方式。
:::

```shell showLineNumbers
cd ../bin/bin
ls
file cec-client-6.0.2
```

![Alt text](images/2-image-18.png)
