docs-cn/docs/rubik-pi-3-user-manual/1.1.0/7.Porting.md
---
sidebar_position: 7
description: ''
custom_edit_url: https://github.com/rubikpi-ai/documentation/blob/main/docs-cn/docs/rubik-pi-3-user-manual/1.1.0/7.Porting.md
---

# 7. 工具&库移植指南

魔方派3已经将开发常用的工具和库集成，若开发过程中使用的工具未集成，可参考 cec-clinet 移植方法进行移植：

## 7.1 cec-client 移植

1. 首先设置交叉编译环境，具体步骤可参考 [1.11.2 安装交叉编译工具](/rubik-pi-3/cn/docs/rubik-pi-3-user-manual/1.1.0/quick-start#1112-安装交叉编译工具)小节：

   ```shell showLineNumbers
   source <your toolchains directory>/environment-setup-armv8-2a-qcom-linux
   ```

2. 下载 *libcec&#x20;*&#x6E90;码：

   ```shell showLineNumbers
   git clone https://github.com/Pulse-Eight/libcec
   ```

3. 进入 *cec-client&#x20;*&#x6E90;码目录执行：

   ```shell showLineNumbers
   mkdir build
   cmake ..  -DCMAKE_INSTALL_PREFIX=../bin
   make
   ```

   `make`命令后会有如下报错，发现是没有 p8-platform 库：

   ![](images/image-147.jpg)

为解决报错，交叉编译 p8-platform 库。

1. 下载 *p8-platform* 源码：

   ```shell showLineNumbers
   git clone https://github.com/Pulse-Eight/platform
   ```

2. 进入 *platform* 文件夹执行：

   ```shell showLineNumbers
   mkdir build
   cmake ..  -DCMAKE_INSTALL_PREFIX=../bin
   make
   ```

3. 到 *bin* 目录将编译生成物拷贝到交叉编译工具链的 *sysroot&#x20;*&#x76EE;录下，如下 */home/zhy/QCOM/sdk* 为交叉编译工具的安装路径，具体可参考 [1.12.2 代码编译](/rubik-pi-3/cn/docs/rubik-pi-3-user-manual/1.1.0/quick-start#1122-代码编译)：

   ```shell showLineNumbers
   cp libp8-platform.a /home/zhy/QCOM/sdk/sysroots/armv8-2a-qcom-linux/usr/lib/
   ```

4. 回到 *libcec&#x20;*&#x76EE;录，继续编译：

   ```shell showLineNumbers
   cd libcec/build
   make 
   ```

5. 编译通过后执行下面命令，将生成物导出到 *bin&#x20;*&#x76EE;录：

   ```shell showLineNumbers
   make install
   ```

6. 执行下面命令查看编译生成物，如下，cec-client 工具已经生成。因魔方派3中已经集成了 libcec 的库，可以 cec-clinet 传输到魔方派3中运行：

   :::note
   传输文件可使用ADB、SCP等方式。
   :::

   ```shell showLineNumbers
   cd ../bin/bin
   ls

   file cec-client-6.0.2

   ```

   ![](images/image-148.jpg)


